# pm-ai-agent

./: .gitignore  README.md  pyproject.toml  raw_material_agent.db
.claude/worktrees/jolly-kirch/: .gitignore  README.md  pyproject.toml
.claude/worktrees/jolly-kirch/backend/: migrate_csv.py
.claude/worktrees/jolly-kirch/backend/app/models/: inventory.py
.claude/worktrees/jolly-kirch/backend/data/: backup_data.sql  material_ledger.csv  prod_plan_code_map.csv  production_plan.csv  vendor.csv
.claude/worktrees/jolly-kirch/docs/: api_specification.md  architecture.md  data_model.md
.claude/worktrees/jolly-kirch/frontend/pages/: 02_agent.py
archive/legacy_csv/: main.py
archive/legacy_csv/backend/: main.py
archive/legacy_csv/backend/app/api/: endpoints.py
archive/legacy_csv/backend/app/models/: domain.py
archive/legacy_csv/backend/app/services/: report_generator.py
archive/legacy_csv/backend/data/: non_conformance.csv  purchase_order.csv  vendor_into_record.csv  warehouse_stock.csv
archive/legacy_csv/frontend/pages/: 01_dashboard.py
backend/: init_db.py  main.py  requirements.txt
backend/app/api/: __init__.py  endpoints.py
backend/app/api/v1/: __init__.py  health.py  inventory.py  purchase_orders.py  vendors.py
backend/app/core/: data_loader.py  db.py
backend/app/models/: domain.py
backend/app/services/: agent_service.py  llm_agent.py
backend/data/: batch_stock.csv  bom.csv  good_receipt.csv  overage_rules.csv  product.csv  purchase_transaction_history.csv
docs/: agent_design.md  operation_guide.md
frontend/: app.py
